@@ -352,6 +352,11 @@ class ReflectModel:
 
         This value is turned into a Parameter during the construction of this
         object.
+        Constant dq/q resolution smearing is deactivated if
+        `dq_type` is set to `'pointwise'` AND point-by-point resolution
+        information is supplied to either the
+        :meth:`refnx.reflect.ReflectModel.__call__` or
+        :meth:`refnx.reflect.ReflectModel.model` methods.
     threads: int, optional
         Specifies the number of threads for parallel calculation. This
         option is only applicable if you are using the ``_creflect``
@@ -359,19 +364,20 @@ class ReflectModel:
         ``_reflect``. If `threads == -1` then all available processors are
         used.
     quad_order: int, optional
-        the order of the Gaussian quadrature polynomial for doing the
+        the order of the Gaussian quadrature polynomial for doing pointwise
         resolution smearing. default = 17. Don't choose less than 13. If
         quad_order == 'ultimate' then adaptive quadrature is used. Adaptive
         quadrature will always work, but takes a _long_ time (2 or 3 orders
         of magnitude longer). Fixed quadrature will always take a lot less
-        time. BUT it won't necessarily work across all samples. For
+        time, BUT it won't necessarily work across all samples. For
         example, 13 points may be fine for a thin layer, but will be
         atrocious at describing a multilayer with bragg peaks.
+        If `dq_type='constant'` then this value is ignored.
     dq_type: {'pointwise', 'constant'}, optional
         Chooses whether pointwise or constant dQ/Q resolution smearing (see
         `dq` keyword) is used. To use pointwise smearing the `x_err` keyword
-        provided to `Objective.model` method must be an array, otherwise the
-        smearing falls back to 'constant'.
+        provided to :meth:`refnx.reflect.ReflectModel.model` must be an array,
+        otherwise the smearing falls back to 'constant'.
     q_offset: float or refnx.analysis.Parameter, optional
         Compensates for uncertainties in the angle at which the measurement is
         performed. A positive/negative `q_offset` corresponds to a situation
@@ -427,13 +433,21 @@ class ReflectModel:
             Units = Angstrom**-1
         p : refnx.analysis.Parameters, optional
             parameters required to calculate the model
-        x_err : np.ndarray
-            dq resolution smearing values for the dataset being considered.
+        x_err : {np.ndarray, float} optional
+            Specifies how the instrumental resolution smearing is carried out
+            for each of the points in `x`.
+            See :func:`refnx.reflect.reflectivity` for further details.
 
         Returns
         -------
         reflectivity : np.ndarray
             Calculated reflectivity
+
+        Notes
+        -----
+        If `x_err` is not provided then the calculation will fall back to
+        the constant dq/q smearing specified by the `dq` attribute of this
+        object.
         """
         return self.model(x, p=p, x_err=x_err)
 
@@ -516,14 +530,21 @@ class ReflectModel:
             Units = Angstrom**-1
         p : refnx.analysis.Parameters, optional
             parameters required to calculate the model
-        x_err : np.ndarray
-            dq resolution smearing values for the dataset being considered.
+        x_err : {np.ndarray, float} optional
+            Specifies how the instrumental resolution smearing is carried out
+            for each of the points in `x`.
+            See :func:`refnx.reflect.reflectivity` for further details.
 
         Returns
         -------
         reflectivity : np.ndarray
             Calculated reflectivity
 
+        Notes
+        -----
+        If `x_err` is not provided then the calculation will fall back to
+        the constant dq/q smearing specified by the `dq` attribute of this
+        object.
         """
         if p is not None:
             self.parameters.pvals = np.array(p)
